# packr

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
kernels/sm_75/: decode_packed.cubin
kernels/sm_86/: decode_packed.cubin  fused_adam_8bit.cubin
kernels/sm_90/: fused_adam_8bit.cubin
packr/: __init__.py  _kernel_loader.py  autograd.py  checkpoint.py  config.py  cuda_adam.py  cuda_adam_kernel.cu  kernel.py  layer.py  layer_patcher.py  optim.py  prompt_gate.py  velvet.py  zpackr_layer.py
packr/kernels/sm_75/: fused_adam_8bit.cubin
packr/kernels/sm_80/: decode_packed.cubin  fused_adam_8bit.cubin
packr/kernels/sm_89/: decode_packed.cubin  fused_adam_8bit.cubin
packr/kernels/sm_90/: decode_packed.cubin
tests/: conftest.py  test_cuda_adam.py  test_mode_packr_unchanged.py  test_packr_core.py  test_packr_kernel.py  test_packr_offload.py  test_vram_regression.py
tools/: ablate_atten_ceiling.py  analyze_signal.py  build_kernels.py  creep_calibrate.py  diagnose.py  signal_char.py  train_harness.py  zstd_creep_calibrate.py
