[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "packr"
version = "0.1.0"
description = "PackR — Packed Residual memory-efficient nn.Linear drop-in replacement"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "otherdrums"}]
keywords = ["pytorch", "memory-efficient", "neural-network", "compression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "triton>=2.1",
]

[project.optional-dependencies]
dev = [
    "transformers",
    "datasets",
]

[tool.setuptools.packages.find]
include = ["packr*"]

[tool.setuptools.package-data]
packr = ["../kernels/**/*.cubin"]
